--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ngrx/store": "^10.1.0",
+    "@types/mapbox-gl": "^1.12.8",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "mapbox-gl": "^1.13.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
