--- a/angular.json
+++ b/angular.json
@@ -24,13 +24,15 @@
               "src/assets"
             ],
             "styles": [
-               "src/styles.css",                      
-                "node_modules/bootstrap/dist/css/bootstrap.min.css"           
-            ],           
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/mapbox-gl/dist/mapbox-gl.css",
+              "./node_modules/@mapbox/mapbox-gl-geocoder/lib/mapbox-gl-geocoder.css"
+            ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
-          ]
+            ]
           },
           "configurations": {
             "production": {
