--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
     "@ngrx/store": "^10.1.0",
-    "@types/mapbox-gl": "^1.12.8",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
-    "mapbox-gl": "^1.13.0",
+    "mapbox-gl": "^2.0.0",
+    "ngx-mapbox-gl": "^5.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -34,9 +34,10 @@
     "@angular-devkit/build-angular": "~0.1000.2",
     "@angular/cli": "~10.0.2",
     "@angular/compiler-cli": "~10.0.3",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mapbox-gl": "^2.0.0",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
