--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@ngrx/effects": "^10.1.1",
     "@ngrx/store": "^10.1.0",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
